fix: prevent videos from clipping when in fullscreen mode

--- a/styles/global.css
+++ b/styles/global.css
@@ -240,3 +240,9 @@ allows controlling them individually
 [data-mode="grayscale"] video:hover {
   filter: grayscale(0);
 }
+
+@media all and (display-mode: fullscreen) {
+  video[object-cover] {
+    object-fit: contain;
+  }
+}
